--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     display: flex;
     flex-direction: column;
+    margin: 0;
 
 }
 
@@ -8,18 +9,20 @@ body {
     display: flex;
     flex-direction: column;
     padding: 20px;
-
+    background-color: #1F2937;
 }
 
 header {
     display: flex;
-
+    font-size: 24px;
+    color: #F9FAF8;
 }
 
 .right-links {
     display: flex;
     margin-left: auto;
     gap: 20px;
+    color: #E5E7EB;
 }
 
 .about {
@@ -27,17 +30,23 @@ header {
     justify-content: center;
     gap: 50px;
     margin: 80px;
+    flex-wrap: wrap;
+    color: #E5E7EB;
+    font-size: 18px;
 }
 
 .maincaption {
     display: flex;
     flex-direction: column;
+    max-width: 300px;
+    margin:
 }
+
 
 .portfolio {
     display: flex;
     flex-direction: column;
-    margin: 100px;
+    margin: 50px;
 }
 
 .learnmore {
@@ -45,25 +54,45 @@ header {
 }
 .cards {
     display: flex;
-    gap: 5%;
+    gap: 10px;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .project {
     display: flex;
     flex-direction: column;
-    max-width: 200px;
+    max-width: 300px;
+    margin: 10px;
+}
+
+.boxed {
+    border: 0.25em;
+    border-color: #3882F6;
+    border-style: solid;
+    border-radius: 20px;
+    padding: 20px;
 }
 
 .quote {
-    margin: auto;
+    text-align: center;
+    background-color: #E5E7EB;
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
+    padding: 50px;
 }
 
 .call-to-action {
     display: flex;
     justify-content: space-between;
-    margin: auto;
+    margin: 80px 20%;
     gap: 20px;
     align-items: center;
+    background-color: #3882F6;
+    padding: 10px 100px;
+    color: #F9FAF8;
+    border-radius: 10px;
 }
 
 .sign-up {
@@ -73,4 +102,17 @@ header {
 
 footer {
     text-align: center;
+    color: #E5E7EB;
+    background-color: #1F2937;
+}
+
+button {
+    background-color: #3882F6;
+    border-radius: 5px;
+    border-color: #F9FAF8;
+}
+
+a {
+    text-decoration: none;
+    color: #F9FAF8;
 }
