--- a/style.css
+++ b/style.css
@@ -71,7 +71,9 @@ header {
     border-color: #3882F6;
     border-style: solid;
     border-radius: 20px;
-    padding: 20px;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
 }
 
 .quote {
