Added decimal, changed layout, attempted positive/negative conversion

--- a/programmingpages/calculator/style.css
+++ b/programmingpages/calculator/style.css
@@ -8,7 +8,9 @@ body {
     border: solid black 2px;
     border-radius: 5px;
     margin: 5px;
-    text-align: center;
+    text-align: right;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 .workingSection {
