--- a/autoProjectPages/autoProjects.css
+++ b/autoProjectPages/autoProjects.css
@@ -3,10 +3,9 @@ a {
 }
 
 body {
-    height: 100%;
     display: grid;
-    grid-template-rows: 1fr 8fr 1fr;
-    grid-template-columns: 15% 85%;
+    grid-template-rows: 1fr 4fr 1fr;
+    grid-template-columns: minmax(125px, 10%) 90%;
     margin: 0;
 }
 
@@ -32,8 +31,9 @@ header > img {
     grid-column: 1;
     grid-row: 2 / -1;
     display: grid;
-    grid-template-rows: repeat(auto-fit, clamp(100px, 5vw, 150px));
-    gap: 20px;
+    grid-template-rows: repeat(auto-fit, 75px);
+    grid-template-columns: minmax(125px, 5vw);
+    gap: 10px;
     padding: 10px;
 }
 
@@ -47,12 +47,14 @@ header > img {
     margin: 20px;
     display: grid;
     grid-column: 2;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, 200px);
     grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 40px;
 }
 
 .project > p {
     margin: 10px;
+    max-width: 200px;
 }
 
 .project>img {
