--- a/autoProjectPages/autoProjects.css
+++ b/autoProjectPages/autoProjects.css
@@ -4,43 +4,52 @@ a {
 
 body {
     display: grid;
-    grid-template-rows: 1fr 4fr 1fr;
-    grid-template-columns: minmax(125px, 10%) 90%;
+    grid-template-rows: 100px 4fr 1fr;
+    grid-template-columns: 15% 85%;
     margin: 0;
 }
 
 header {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
-    text-align: center;
+    display: flex;
     background-color: #1F2937;
     grid-column: 1 / 3;
+    max-height: 100px;
 }
 
-header > a {
-    display: grid;
+.rightLinks,
+.rightLinks>a {
+    display: flex;
+    margin-left: auto;
+    gap: 20px;
+    color: #E5E7EB;
     align-items: center;
-    color: #F9FAF8;
+    margin-right: 20px;
 }
 
 header > img {
-    max-width: 10vw;
+    max-width: 100px;
 }
 
 .nav {
     grid-column: 1;
     grid-row: 2 / -1;
-    display: grid;
-    grid-template-rows: repeat(auto-fit, 75px);
-    grid-template-columns: minmax(125px, 5vw);
-    gap: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    background-color: #1F2937;
     padding: 10px;
 }
 
 .nav > p {
-    padding: 0;
-    margin: 0;
     text-align: center;
+    color: #E5E7EB;
+}
+
+.nav > a {
+    padding: 0;
+    margin-left: 5px;
+    text-align: left;
+    color: #E5E7EB;
 }
 
 .cards {
