--- a/webDevPages/dashboard.css
+++ b/webDevPages/dashboard.css
@@ -1,21 +1,31 @@
 body {
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    grid-template-rows: 1fr 4fr;
+    grid-template-columns: 225px 75%;
+    grid-template-rows: 125px 1fr;
+    margin: 0;
+    height: 100vh;
 }
 
 nav {
     grid-column: 1 / 2;
     grid-row: 1 / 3;
     display: grid;
-    grid-template-columns: 2, 1fr 3fr;
+    grid-template-columns: 40px 150px;
     grid-template-rows: 50px repeat(auto-fill, minmax(150px, 20vh));
-    gap: 20px;
+    gap: 40px;
+    background-color: #1F2937;
+}
+
+nav>*>*,
+nav>* {
+    text-decoration: none;
+    color: whitesmoke;
 }
 
 nav>h2 {
     grid-column: 1 / 3;
-    grid-row: 1 / 3;
+    grid-row: 1;
+    justify-self: center;
 }
 
 nav>.userLinks {
@@ -35,21 +45,147 @@ nav>.infoLinks {
 header {
     grid-column: 2 / 4;
     display: grid;
-    grid-template-rows: 10vh 10vh;
-    grid-template-columns: 50vw 20vw;
+    gap: 20px;
+    grid-template-rows: 5vh 5vh;
+    grid-template-columns: repeat(10, 1fr);
+    justify-items: stretch;
+    padding: 15px;
+    margin-bottom: 10px;
+    box-shadow: 0px 5px 5px #1F2937;
+    background-color: #1F2937;
 }
 
-header>.topRow {
-    grid-row: 1 / 2;
-    grid-column: 1 / 3;
+header>*,
+header>*>* {
+    align-items: center;
+    justify-items: center;
 }
 
-header>.bottomRow {
-    grid-row: 2 / 3;
-    grid-column: 1 / 3;
+header>p,
+header>a {
+    text-decoration: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    color: whitesmoke;
+}
+
+header>input {
+    grid-column: 1 / 6;
+    grid-row: 1;
+}
+
+header>#bell {
+    grid-column: 7;
+    grid-row: 1;
+}
+
+header>.avatar {
+    grid-column: 8;
+    grid-row: 1;
+}
+
+header>.userImage {
+    grid-column: 9;
+    grid-row: 1;
+}
+
+header>.userName {
+    grid-column: 10;
+    grid-row: 1;
+}
+
+
+header>.userGreeting {
+    grid-row: 2;
+    grid-column: 1 / 5;
+}
+
+header>.new {
+    grid-column: 6;
+    grid-row: 2;
+}
+
+header>.upload {
+    grid-column: 7;
+    grid-row: 2;
+}
+
+header>.share {
+    grid-column: 8;
+    grid-row: 2;
 }
 
 .content {
     grid-column: 2 / 4;
     grid-row: 2;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 40vh 40vh;
+}
+
+.content>.projects {
+    grid-row: 1 / 3;
+    grid-column: 1;
+    display: grid;
+    grid-template-columns: repeat( auto-fill, minmax(250px, 1fr) );
+    grid-template-rows: masonry;
+    padding: 40px;
+    gap: 20px;
+    overflow-y: scroll;
+    background-color:  #00AACC;
+}
+
+.projects>.card {
+    min-height: fit-content;
+    box-shadow: 5px 0px #1F2937 inset;
+    padding: 15px;
+    border-radius: 5px;
+    border: 1px solid grey;
+    background-color: aliceblue;
+}
+
+.content>.announcements {
+    grid-column: 2;
+    grid-row: 1;
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    background-color: #00AACC;
+    gap: 10px;
+    justify-content: center;
+}
+
+.announcements>*,
+.trending>* {
+    padding-left: 10px;
+    text-decoration: none;
+    color: whitesmoke;
+    gap: 10px;
+}
+
+.content>.trending {
+    grid-row: 2;
+    grid-column: 2;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background-color: #00AACC;
+    text-decoration: none;
+    justify-content: center;
+    overflow-y: scroll;
+}
+
+button {
+    color:black;
+    border-radius: 5px;
+    border: none;
+    background-color: #00AACC;
+}
+
+input {
+    color:aliceblue;
+    background-color: #00AACC;
+    border: 5px darkcyan;
+    padding: 5px;
 }
