--- a/webDevPages/dashboard.css
+++ b/webDevPages/dashboard.css
@@ -11,8 +11,9 @@ nav {
     grid-row: 1 / 3;
     display: grid;
     grid-template-columns: 40px 150px;
-    grid-template-rows: 50px repeat(auto-fill, minmax(150px, 20vh));
+    grid-template-rows: 50px repeat(auto-fill, minmax(150px, 40vh));
     gap: 40px;
+    padding-left: 20px;
     background-color: #1F2937;
 }
 
@@ -22,6 +23,11 @@ nav>* {
     color: whitesmoke;
 }
 
+nav>*>*>img {
+    background-color: aliceblue;
+    border-radius: 5px;
+}
+
 nav>h2 {
     grid-column: 1 / 3;
     grid-row: 1;
@@ -29,14 +35,15 @@ nav>h2 {
 }
 
 nav>.userLinks {
-    grid-column: 2 / 3;
+    grid-column: 1 / 3;
+    gap: 20px;
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
 
 nav>.infoLinks {
-    grid-column: 2 / 3;
+    grid-column: 1 / 3;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -154,6 +161,8 @@ header>.share {
     background-color: #00AACC;
     gap: 10px;
     justify-content: center;
+    box-shadow: 0px 5px 5px whitesmoke;
+    margin-bottom: 5px;
 }
 
 .announcements>*,
