--- a/autoProjectPages/autoProjects.css
+++ b/autoProjectPages/autoProjects.css
@@ -67,7 +67,8 @@ header > img {
     max-width: 200px;
 }
 
-.project>img {
+.project>img,
+.project>*>img {
     border: 0.25em;
     border-color: #3882F6;
     border-style: solid;
@@ -75,11 +76,6 @@ header > img {
     width: 200px;
     height: 200px;
     object-fit: cover;
-}
-
-.project > img {
-    max-width: 300px;
-    max-height: 300px;
 }
 
 body > footer {
