--- a/programmingpages/ticTacToe/ticTacToe.css
+++ b/programmingpages/ticTacToe/ticTacToe.css
@@ -1,21 +1,42 @@
 #gameBoard {
     display: grid;
-    grid-template-columns: repeat(3, 50px);
-    grid-template-rows: repeat(3, 50px);
+    grid-template-columns: repeat(3, 70px);
+    grid-template-rows: repeat(3, 70px);
     align-items: center;
     justify-items: center;
+    grid-column: 2;
+    grid-row: 2;
 }
 
 #gameBoard > * {
     border: 1px solid black;
-    padding: 10px;
-    width: 30px;
-    height: 30px;
+    /*padding: 10px;*/
+    width: 100%;
+    height: 100%;
     justify-content: center;
     text-align: center;
+    font-size: large;
 }
 
 #gameWindow {
+    display: grid;
+    grid-template-columns: 15fr 70fr 15fr;
+    grid-template-rows:repeat(2, 100fr);
     padding: 10px;
+}
+
+#turnDisplay {
+    grid-column: 2 / 3;
+    grid-row: 1;
+}
+
+#player1score {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+#player2score {
+    grid-column: 3;
+    grid-row: 2;
 }
 
