--- a/programmingpages/ticTacToe/ticTacToe.css
+++ b/programmingpages/ticTacToe/ticTacToe.css
@@ -6,8 +6,10 @@
     justify-items: center;
     grid-column: 2;
     grid-row: 2;
+    justify-self: center;
 }
 
+/*this is the actual tic tac toe board*/
 #gameBoard > * {
     border: 1px solid black;
     /*padding: 10px;*/
@@ -20,7 +22,7 @@
 
 #gameWindow {
     display: grid;
-    grid-template-columns: 15fr 70fr 15fr;
+    grid-template-columns: 40fr 20fr 40fr;
     grid-template-rows:repeat(2, 100fr);
     padding: 10px;
 }
@@ -28,15 +30,22 @@
 #turnDisplay {
     grid-column: 2 / 3;
     grid-row: 1;
+    text-align: center;
+}
+
+#turnDisplay > button {
+    font-size: large;
 }
 
 #player1score {
     grid-column: 1;
     grid-row: 2;
+    font-size:large;
+    text-align: right;
 }
 
 #player2score {
     grid-column: 3;
     grid-row: 2;
+    font-size: large;
 }
-
