--- a/programmingpages/restaurant/src/style.css
+++ b/programmingpages/restaurant/src/style.css
@@ -43,14 +43,17 @@ nav>* {
 #content {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 
 #content>* {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template: 1 / 4;
+    justify-items: center;
+}
+
+#current_div {
     text-align: center;
+    margin: 5%;
 }
 
 button {
