Some functionality added to page. Worked out class creation, DOM addition, and updating 'completed' status

--- a/programmingpages/restaurant/src/style.css
+++ b/programmingpages/restaurant/src/style.css
@@ -11,6 +11,10 @@ header {
     display: flex;
 }
 
+header>h2 {
+    color: #F9FAF8;
+}
+
 header>img {
     max-width: 10vw;
     max-height: 10vw;
