Returned 'clear field' functionality

--- a/autoProjectPages/subPages.css
+++ b/autoProjectPages/subPages.css
@@ -26,7 +26,14 @@ header {
     margin-right: 20px;
 }
 
-header > img {
+img {
+    max-width: 400px;
+    max-height: 400px;
+    align-self: center;
+    padding: 20px;
+}
+
+#logo {
     max-width: 10vw;
     max-height: 10vw;
 }
@@ -41,39 +48,40 @@ header > img {
     padding: 10px;
 }
 
-.nav > p {
+.nav>p {
     text-align: center;
     color: #E5E7EB;
 }
 
-.nav > a {
+.nav>a {
     padding: 0;
     margin-left: 5px;
     text-align: left;
     color: #E5E7EB;
 }
 
-.content,
-.content>* {
+.content {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
 }
 
-.content>*>img {
-    max-width: 400px;
-    max-height: 400px;
-    align-self: center;
-    padding: 20px;
+.content>* {
+    /* border: 5px solid #1F2937; */
+    margin: 5px;
+    border-radius: 0.5em;
+    padding: 10px;
+    display: flex;
 }
 
 .content>h2,
-.content>*>h3,
-.content>*>p {
+.content>h3,
+.content>p {
     text-align: center;
     padding: 10px;
 }
 
-body > footer {
+
+body>footer {
     position: sticky;
     top: 100vh;
     background-color: #1F2937;
