--- a/programmingpages/dashboard/dashboard.css
+++ b/programmingpages/dashboard/dashboard.css
@@ -163,6 +163,7 @@ header>.share {
     justify-content: center;
     box-shadow: 0px 5px 5px whitesmoke;
     margin-bottom: 5px;
+    margin-left: 5px;
 }
 
 .announcements>*,
@@ -188,6 +189,7 @@ header>.share {
     text-decoration: none;
     justify-content: center;
     overflow-y: scroll;
+    margin-left: 5px;
 }
 
 button {
@@ -195,11 +197,25 @@ button {
     border-radius: 5px;
     border: none;
     background-color: #00AACC;
+    margin-bottom: 15px;
 }
 
 input {
-    color:aliceblue;
+    color:black;
     background-color: #00AACC;
     border: 5px darkcyan;
     padding: 5px;
+    border-radius: 2em;
+
+}
+
+
+body > footer {
+    position: sticky;
+    top: 100vh;
+    background-color: #1F2937;
+    color: #F9FAF8;
+    text-align: center;
+    grid-column: 1 / 3;
+    width: 100vw;
 }
