--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ header {
     display: flex;
     justify-content: center;
     gap: 50px;
-    margin: 80px;
+    margin: 0px 80px 0px 80px;
     flex-wrap: wrap;
     color: #E5E7EB;
     font-size: 18px;
@@ -122,6 +122,6 @@ a.projectLink {
 }
 
 header > img {
-    max-width: 10vw;
-    max-height: 10vw;
+    max-width: 100px;
+    max-height: 100px;
 }
