--- a/programmingpages/waterio/src/waterio.css
+++ b/programmingpages/waterio/src/waterio.css
@@ -1,6 +1,8 @@
 html, body {
     margin: 0;
     background: url(./images/wateredplant.jpg);
+    display: flex;
+    flex-direction: column;
 }
 
 .header {
@@ -52,4 +54,23 @@ html, body {
     right: 20px;
     margin-left: auto;
     position: absolute;
+}
+
+.content.shown {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 70vh;
+    width: 80vw;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: antiquewhite;
+    align-self: center;
+    border-radius: .5em;
+    
+}
+
+
+.content.hidden {
+    display: none;
 }
