--- a/autoProjectPages/autoProjects.css
+++ b/autoProjectPages/autoProjects.css
@@ -7,6 +7,7 @@ body {
     grid-template-rows: 100px 4fr 1fr;
     grid-template-columns: 15% 85%;
     margin: 0;
+    height: 100vh;
 }
 
 header {
@@ -26,7 +27,7 @@ header {
     margin-right: 20px;
 }
 
-header > img {
+header>img {
     max-width: 10vw;
     max-height: 10vw;
 }
@@ -41,12 +42,12 @@ header > img {
     padding: 10px;
 }
 
-.nav > p {
+.nav>p {
     text-align: center;
     color: #E5E7EB;
 }
 
-.nav > a {
+.nav>a {
     padding: 0;
     margin-left: 5px;
     text-align: left;
@@ -62,7 +63,7 @@ header > img {
     gap: 40px;
 }
 
-.project > p {
+.project>p {
     margin: 10px;
     max-width: 200px;
 }
@@ -78,11 +79,17 @@ header > img {
     object-fit: cover;
 }
 
-body > footer {
+body>footer {
     position: sticky;
     top: 100vh;
     background-color: #1F2937;
     color: #F9FAF8;
     text-align: center;
     grid-column: 1 / 3;
+}
+
+
+#logo {
+    max-width: 10vw;
+    max-height: 10vw;
 }
